thêm phần xem đơn đặt tour của khách hàng